--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,17 @@
 ---
-# tasks file for wsgi
+- name: install mod_wsgi
+  yum: name=mod_wsgi state=present
+  when: python_base_name == 'python'
+  tags:
+    - python
+    - wsgi
+    - packages
+
+- name: configure main mod_wsgi settings
+  template: src=wsgi.conf.j2  dest=/etc/httpd/conf.d/wsgi.conf mode=0644 owner=root group=root
+  when: python_base_name == 'python'
+  notify: restart httpd
+  tags:
+    - python
+    - wsgi
+    - configuration
