readme and dependency update

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,5 +12,7 @@ galaxy_info:
   categories:
   - development
   - web
-dependencies: []
-  
+dependencies:
+  - { role: correcthorse.common }
+  - { role: correcthorse.python }
+  - { role: correcthorse.httpd }
