--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   description: 
   company: 
   license: MIT
-  min_ansible_version: 1.9.1
+  min_ansible_version: 2.2.1
   platforms:
   - name: EL
     versions:
@@ -13,6 +13,6 @@ galaxy_info:
   - development
   - web
 dependencies:
-  - { role: correcthorse.common }
-  - { role: correcthorse.python }
-  - { role: correcthorse.httpd }
+  - correcthorse.common
+  - correcthorse.python
+  - correcthorse.httpd
