--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,4 +18,4 @@
 
 - name: configure vhost mod_wsgi settings
   template: src=vhost.wsgi.conf.j2 dest="/etc/httpd/conf.d/vhost_{{ item.key }}.conf.d/wsgi.conf" mode=0644 owner=root group=root
-  with_dict: wsgi_apps
+  with_dict: "{{ wsgi_apps }}"
