--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,3 +19,7 @@
 - name: configure vhost mod_wsgi settings
   template: src=vhost.wsgi.conf.j2 dest="/etc/httpd/conf.d/vhost_{{ item.key }}.conf.d/wsgi.conf" mode=0644 owner=root group=root
   with_dict: "{{ wsgi_apps }}"
+  tags:
+    - python
+    - wsgi
+    - configuration
