--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,18 @@
 ---
+- name: gather os specific variables
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "{{ ansible_os_family }}-{{ ansible_distribution_major_version}}.yml"
+    - "{{ ansible_os_family }}.yml"
+  tags: vars
+
+- name: define wsgi package name
+  set_fact:
+    wsgi_package_name: "{{ _wsgi_package_name }}"
+  when: wsgi_package_name is not defined
+
 - name: install mod_wsgi
-  yum: name=mod_wsgi state=present
+  yum: name="{{ wsgi_package_name }}" state=present
   when: python_base_name == 'python'
   tags:
     - python
