--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,14 +1,14 @@
 ---
 galaxy_info:
-  author: Joshua Rusch
+  author: Josh Rusch
   description: 
   company: 
   license: MIT
-  min_ansible_version: 2.2.1
+  min_ansible_version: 2.10.3
   platforms:
   - name: EL
     versions:
-    - 7
+    - 8
   categories:
   - development
   - web
