separate vhost and daemon config, better naming
By separating daemon and vhost config, we can now have multiple applications running on different daemons in one vhost config.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,7 +40,7 @@
     mode: 0644
     owner: root
     group: root
-  with_dict: "{{ wsgi_apps }}"
+  with_dict: "{{ wsgi_vhosts }}"
   tags:
     - python
     - wsgi
