--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,17 @@ wsgi_apps: {}
 wsgi_dont_write_bytecode: 'On'
 
 
+wsgi_lang: 'en_US.UTF-8'
+wsgi_locale: 'en_US.UTF-8'
+wsgi_queue-timeout: 45
+wsgi_socket-timeout: 60
+wsgi_connect-timeout: 15
+wsgi_request-timeout: 60
+wsgi_inactivity-timeout: 0
+wsgi_startup-timeout: 15
+wsgi_deadlock-timeout: 60
+wsgi_graceful-timeout: 15
+wsgi_eviction-timeout: 0
+wsgi_restart-interval: 0
+wsgi_shutdown-timeout: 5
+wsgi_maximum-requests: 0
